--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!-- 
+  ============================================================
+  Project: Simple Calculator (v1.0)
+  Author: Mohammadreza Shahbazi (M.SH)
+  GitHub: https://github.com/Mohammadreza-Shahbazi313
+  LinkedIn: https://www.linkedin.com/in/mohammadreza-shahbazi-313sh/
+  Telegram: https://t.me/STANsoSAD
+  Email: eminemengland2000@gmail.com
+  Year: 2025
+  ============================================================
+-->
 <!DOCTYPE html>
 <html lang="fa">
 <head>
