--- a/V2/index.html
+++ b/V2/index.html
@@ -1,3 +1,15 @@
+<!-- 
+  ============================================================
+  Project: Glass Calculator (v2.0)
+  Author: Mohammadreza Shahbazi (M.SH)
+  GitHub: https://github.com/Mohammadreza-Shahbazi-313
+  LinkedIn: https://www.linkedin.com/in/mohammadreza-shahbazi-313sh/
+  Telegram: https://t.me/STANsoSAD
+  Email: eminemengland2000@gmail.com
+  Year: 2025
+  ============================================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
