--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
     </div>
         <!-- Result Output -->
     <div id="result"></div>
+
+    <!-- Button to open project on GitHub Pages -->
+<div class="run-button-container">
+  <a href="https://Mohammadreza-Shahbazi313.github.io/calculator/" target="_blank">
+    <button class="run-btn">Run Project</button>
+  </a>
+    
   </div>
  <!-- Link to main JavaScript file -->
   <script src="script.js"></script>
