--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- Button to open project on GitHub Pages -->
 <div class="run-button-container">
-  <a href="https://Mohammadreza-Shahbazi313.github.io/calculator/" target="_blank">
+  <a href="https://Mohammadreza-Shahbazi313.github.io/Calculator/" target="_blank">
     <button class="run-btn">Run Project</button>
   </a>
     
