Add button for Version 2 of the calculator
Added a button to open Version 2 of the calculator.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@
   <a href="https://Mohammadreza-Shahbazi313.github.io/Calculator/" target="_blank">
     <button class="run-btn">Run Project</button>
   </a>
-    
+  
+    <!-- Button to open Version 2 of the calculator -->
+<div class="v2-button-container">
+  <a href="https://mohammadreza-shahbazi313.github.io/Calculator/V2/" target="_blank">
+    <button class="v2-btn">V2 Click Here</button>
+  </a>
+</div>
+
   </div>
  <!-- Link to main JavaScript file -->
   <script src="script.js"></script>
