--- a/index.html
+++ b/index.html
@@ -32,21 +32,32 @@
     <!-- =========================
      Number Buttons Section
      ========================= -->
-    <div class="button-container">
-      <button onclick="appendNumber(7)">7</button>
-      <button onclick="appendNumber(8)">8</button>
-      <button onclick="appendNumber(9)">9</button>
-      <button onclick="appendNumber(4)">4</button>
-      <button onclick="appendNumber(5)">5</button>
-      <button onclick="appendNumber(6)">6</button>
-      <button onclick="appendNumber(1)">1</button>
-      <button onclick="appendNumber(2)">2</button>
-      <button onclick="appendNumber(3)">3</button>
-            <!-- Clear button -->
-      <button onclick="clearDisplay()">C</button>
-       <!-- Zero -->
-      <button onclick="appendNumber(0)">0</button>
-    </div>
+<!-- =========================
+ Number Buttons Section (updated: add single-delete button)
+ ========================= -->
+<div class="button-container">
+  <button onclick="appendNumber(7)">7</button>
+  <button onclick="appendNumber(8)">8</button>
+  <button onclick="appendNumber(9)">9</button>
+
+  <button onclick="appendNumber(4)">4</button>
+  <button onclick="appendNumber(5)">5</button>
+  <button onclick="appendNumber(6)">6</button>
+
+  <button onclick="appendNumber(1)">1</button>
+  <button onclick="appendNumber(2)">2</button>
+  <button onclick="appendNumber(3)">3</button>
+
+  <!-- single-character delete (backspace) -->
+  <button onclick="deleteLast()">Del ⌫</button>
+
+  <!-- Clear -->
+  <button onclick="clearDisplay()">C</button>
+
+  <!-- Zero -->
+  <button onclick="appendNumber(0)">0</button>
+</div>
+
       <!-- =========================
        Operator Buttons Section
        ========================= -->
