--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
   <button onclick="appendNumber(2)">2</button>
   <button onclick="appendNumber(3)">3</button>
 
-  <!-- single-character delete (backspace) -->
-  <button onclick="deleteLast()">Del ⌫</button>
 
   <!-- Clear -->
   <button onclick="clearDisplay()">C</button>
-
+  
   <!-- Zero -->
   <button onclick="appendNumber(0)">0</button>
+
+  <!-- single-character delete (backspace) -->
+  <button onclick="deleteLast()">⌫</button>
 </div>
 
       <!-- =========================
